# Magma

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/Magma/: Magma.h
include/Magma/API/: OpenGLRenderAPI.h  RenderAPI.h  VulkanRenderAPI.h
include/Magma/Application/: Application.h  Image.h  Themes.h
include/Magma/Core/: EntryPoint.h  Logging.h  PlatformDetection.h  VulkanImpl.h
include/Magma/Resources/: FiraCode.embed
include/Magma/Utility/: Input.h  Random.h
src/API/: OpenGLRenderAPI.cpp  RenderAPI.cpp  VulkanRenderAPI.cpp
src/Application/: Application.cpp  ImageImplOpenGL.cpp  ImageImplVulkan.cpp  Themes.cpp
src/Application/API/: ApplicationImplOpenGL.cpp  ApplicationImplVulkan.cpp
src/Core/: Logging.cpp  VulkanImpl.cpp
src/Utility/: Input.cpp  Random.cpp
